--- a/MapPinMouseOverApp/Base.lproj/Main.storyboard
+++ b/MapPinMouseOverApp/Base.lproj/Main.storyboard
@@ -712,7 +712,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <mapView mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TEH-Fa-eEA">
+                            <mapView mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TEH-Fa-eEA" customClass="MapView" customModule="MapPinMouseOverApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                                 <connections>
                                     <outlet property="delegate" destination="XfG-lQ-9wD" id="QoH-BG-1RO"/>
